# Scientific-Calculator

./: Android.mk  Application.mk  CMakeLists.txt  MainActivity.java  README.md  app.js  calculator_engine.c  calculator_engine.h  expression_parser.c  expression_parser.h  index.html  jni_bridge.c  project_structure.json  script (1).py  script (2).py  script (3).py  script.py  style.css
